Fixed sponsor page text sizing on mobile.

--- a/style.css
+++ b/style.css
@@ -400,7 +400,7 @@ img {
 
 .supportHeader {
     margin-top: 100px;
-    width: 90%;
+    padding: 50px;
     margin-right: auto;
     margin-left: auto;
     display: block;
